--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "routes": [
     {
-      "src": "/api/offers/all(.*)",
+      "src": "/api/offers/all/(.*)",
       "dest": "/api/offers/all/$1",
       "headers": {
         "Strict-Transport-Security": "max-age=0"
